--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ packages = [{include = "karyakram_backend"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+fastapi = "^0.100.1"
+uvicorn = {extras = ["standard"], version = "^0.23.1"}
 
 
 [build-system]
