--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 fastapi = "^0.100.1"
 uvicorn = {extras = ["standard"], version = "^0.23.1"}
 sqlmodel = "^0.0.8"
+psycopg2 = "^2.9.7"
 
 [build-system]
 requires = ["poetry-core"]
