--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,12 +2,13 @@ services:
   postgres:
     image: postgres
     volumes:
-      - ./karyakram:/var/lib/postgresql/data
+      # - ./karyakram:/var/lib/postgresql/data
+      - E:\Install Software\PostgreSQL\15\data:/var/lib/postgresql/data
     # pass username and password to postgres from .env file
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${DB_USERNAME}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
     # port mapping with postgres container with host machine
     ports:
       - 5432:5432
