--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ fastapi = "^0.100.1"
 uvicorn = {extras = ["standard"], version = "^0.23.1"}
 sqlmodel = "^0.0.8"
 psycopg2 = "^2.9.7"
+alembic = "^1.11.3"
+
 
 [build-system]
 requires = ["poetry-core"]
